--- a/Languages/🇯🇵 Japanese 🔒/05. Conditionals.md
+++ b/Languages/🇯🇵 Japanese 🔒/05. Conditionals.md
@@ -31,7 +31,7 @@ border: off
     -   `楽しければ、私も行く`
     -   _If it's fun, I'll go too_
 -   For nouns and な adjectives, add であれば
-    -   `学生であれば、撃って`
+    -   `先生であれば、撃って`
     -   _If I'm a teacher, I'd shoot_
 
 --- column-end ---
